[gd_scene load_steps=52 format=2]

[ext_resource path="res://niveis/cordel1/nivel3/nivel3.gd" type="Script" id=1]
[ext_resource path="res://cenas_universais/botaoVoltaMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://cenas_universais/Dash/dash.tscn" type="PackedScene" id=3]
[ext_resource path="res://cenas_universais/mensagem_vitoria.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/botao_play.png" type="Texture" id=5]
[ext_resource path="res://assets/base_cartas.png" type="Texture" id=6]
[ext_resource path="res://assets/placa.png" type="Texture" id=7]
[ext_resource path="res://assets/instrucoes_borda.png" type="Texture" id=8]
[ext_resource path="res://assets/espaco_instrucoes.png" type="Texture" id=9]
[ext_resource path="res://assets/botao_lixeira.png" type="Texture" id=10]
[ext_resource path="res://assets/cenario_instrucoes.png" type="Texture" id=11]
[ext_resource path="res://assets/plataforma.png" type="Texture" id=12]
[ext_resource path="res://assets/cenario_batalha.png" type="Texture" id=13]
[ext_resource path="res://niveis/cordel1/nivel3/cartas-nivel3.gd" type="Script" id=14]
[ext_resource path="res://niveis/cordel1/nivel3/instrucoes-nivel3.gd" type="Script" id=15]
[ext_resource path="res://cenas_universais/mensagem_derrota.tscn" type="PackedScene" id=16]
[ext_resource path="res://cenas_universais/jogador.tscn" type="PackedScene" id=17]
[ext_resource path="res://assets/Retro Gaming.ttf" type="DynamicFontData" id=18]
[ext_resource path="res://assets/botao_olho_base.png" type="Texture" id=19]
[ext_resource path="res://assets/espinhos.png" type="Texture" id=20]
[ext_resource path="res://assets/mao_apontando.png" type="Texture" id=21]
[ext_resource path="res://assets/botao_olho_novo_ativado.png" type="Texture" id=22]
[ext_resource path="res://assets/esperar.png" type="Texture" id=23]

[sub_resource type="DynamicFont" id=13]
size = 14
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=2]
size = 45
font_data = ExtResource( 18 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 39, 38.25 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 20 )
region = Rect2( 0, 0, 31, 32 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 20 )
region = Rect2( 0, 32, 31, 32 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 20 )
region = Rect2( 0, 64, 31, 32 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 20 )
region = Rect2( 0, 96, 31, 32 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 20 )
region = Rect2( 0, 128, 31, 32 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 20 )
region = Rect2( 0, 160, 31, 32 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "New Anim",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 84, 10 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 93, 10 )

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 10, 69 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 21 )
region = Rect2( 0, 0, 227, 200 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 21 )
region = Rect2( 227, 0, 227, 200 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 21 )
region = Rect2( 0, 200, 227, 200 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 21 )
region = Rect2( 227, 200, 227, 200 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 21 )
region = Rect2( 0, 400, 227, 200 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 21 )
region = Rect2( 227, 400, 227, 200 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 21 )
region = Rect2( 0, 600, 227, 200 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 21 )
region = Rect2( 227, 600, 227, 200 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 21 )
region = Rect2( 0, 800, 227, 200 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 21 )
region = Rect2( 227, 800, 227, 200 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 21 )
region = Rect2( 0, 1000, 227, 200 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 21 )
region = Rect2( 227, 1000, 227, 200 )

[sub_resource type="SpriteFrames" id=39]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=40]
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=41]
font_data = ExtResource( 18 )

[node name="nivel3" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 225, 162 )
scale = Vector2( 3.5, 3.5 )
texture = ExtResource( 13 )

[node name="fundo" type="Sprite" parent="."]
position = Vector2( 256, 150 )
texture = ExtResource( 11 )

[node name="s_instrucao1" type="Sprite" parent="fundo"]
position = Vector2( 190, -110.5 )
scale = Vector2( 1.1905, 1 )
texture = ExtResource( 9 )

[node name="borda_instrucao1" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 190.15, -110 )
scale = Vector2( 1.18797, 1 )
texture = ExtResource( 8 )

[node name="s_instrucao2" type="Sprite" parent="fundo"]
position = Vector2( 190, -37 )
scale = Vector2( 1.1905, 1 )
texture = ExtResource( 9 )

[node name="borda_instrucao2" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 190.15, -37 )
scale = Vector2( 1.18797, 1 )
texture = ExtResource( 8 )

[node name="s_instrucao3" type="Sprite" parent="fundo"]
position = Vector2( 190, 36 )
scale = Vector2( 1.1905, 1 )
texture = ExtResource( 9 )

[node name="borda_instrucao3" type="Sprite" parent="fundo"]
visible = false
position = Vector2( 190.15, 36 )
scale = Vector2( 1.18797, 1 )
texture = ExtResource( 8 )

[node name="dash" parent="." instance=ExtResource( 3 )]

[node name="cartas" type="Node" parent="."]
script = ExtResource( 14 )

[node name="carta0" type="TextureButton" parent="cartas"]
margin_left = 90.0
margin_top = 193.0
margin_right = 122.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta0"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
align = 1
valign = 1

[node name="carta1" type="TextureButton" parent="cartas"]
margin_left = 162.0
margin_top = 193.0
margin_right = 194.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta1"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
align = 1
valign = 1

[node name="carta2" type="TextureButton" parent="cartas"]
margin_left = 235.0
margin_top = 193.0
margin_right = 267.0
margin_bottom = 235.0
rect_scale = Vector2( 2.1, 2.1 )
texture_normal = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="numero" type="Label" parent="cartas/carta2"]
margin_right = 32.0
margin_bottom = 42.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
align = 1
valign = 1

[node name="instrucoes" type="Node" parent="."]
script = ExtResource( 15 )

[node name="instrucao1" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 9.0
margin_right = 508.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao2" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 82.0
margin_right = 508.0
margin_bottom = 144.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="instrucao3" type="Label" parent="instrucoes"]
margin_left = 384.0
margin_top = 155.0
margin_right = 508.0
margin_bottom = 217.0
custom_fonts/font = SubResource( 2 )
align = 1
valign = 1

[node name="botoes" type="Node" parent="."]

[node name="botao_pronto" type="TextureButton" parent="botoes"]
margin_left = 384.0
margin_top = 224.0
margin_right = 424.0
margin_bottom = 264.0
rect_scale = Vector2( 1.75, 1.75 )
texture_normal = ExtResource( 5 )

[node name="botao_lixeira" type="TextureButton" parent="botoes"]
margin_left = 451.0
margin_top = 229.0
margin_right = 491.0
margin_bottom = 269.0
rect_scale = Vector2( 1.5, 1.5 )
texture_normal = ExtResource( 10 )

[node name="botaoVoltaMenu" parent="botoes" instance=ExtResource( 2 )]
margin_left = 1.0
margin_top = 1.0
margin_right = 21.0
margin_bottom = 21.0
rect_scale = Vector2( 2, 2 )

[node name="botao_olho" type="TextureButton" parent="botoes"]
modulate = Color( 0, 1, 0, 1 )
margin_left = 343.0
margin_top = 129.0
margin_right = 384.0
margin_bottom = 171.0
texture_normal = ExtResource( 19 )

[node name="pisos" type="Node" parent="."]

[node name="piso_esquerda" type="Area2D" parent="pisos"]
position = Vector2( 138, 144 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="pisos/piso_esquerda"]
scale = Vector2( 6, 5 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_esquerda"]
position = Vector2( 0.5, -69.75 )
shape = SubResource( 14 )

[node name="piso_centro" type="Area2D" parent="pisos"]
position = Vector2( 193, 144 )
scale = Vector2( 0.5, 0.5 )

[node name="Sprite" type="Sprite" parent="pisos/piso_centro"]
position = Vector2( 2, 0 )
scale = Vector2( 6, 5 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_centro"]
position = Vector2( 3, -69.75 )
shape = SubResource( 14 )

[node name="espinhos" type="AnimatedSprite" parent="pisos/piso_centro"]
position = Vector2( 2.00003, -88 )
scale = Vector2( 3.1, 3 )
frames = SubResource( 20 )
animation = "New Anim"
speed_scale = 4.0

[node name="piso_direita" type="Area2D" parent="pisos"]
position = Vector2( 251, 144 )
scale = Vector2( 0.5, 0.5 )

[node name="placa" type="Sprite" parent="pisos/piso_direita"]
position = Vector2( -4, -76 )
scale = Vector2( 2.5, 2.5 )
texture = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="pisos/piso_direita"]
scale = Vector2( 6, 5 )
texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pisos/piso_direita"]
position = Vector2( 0.5, -69.75 )
shape = SubResource( 14 )

[node name="mensagens" type="Node" parent="."]

[node name="mensagem_vitoria" parent="mensagens" instance=ExtResource( 4 )]
visible = false
nivelRestart = "res://niveis/cordel1/nivel3/nivel3.tscn"
nivelProximo = "res://niveis/cordel1/nivel4/nivel4.tscn"

[node name="mensagem_derrota" parent="mensagens" instance=ExtResource( 16 )]
visible = false
nivelRestart = "res://niveis/cordel1/nivel3/nivel3.tscn"
voltaMenu = "res://menu/menu.tscn"

[node name="colisoes" type="Node" parent="."]

[node name="colisao_cima" type="StaticBody2D" parent="colisoes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisoes/colisao_cima"]
position = Vector2( 108, 4 )
shape = SubResource( 10 )

[node name="colisao_baixo" type="StaticBody2D" parent="colisoes"]
position = Vector2( 24, 272 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisoes/colisao_baixo"]
position = Vector2( 83, 0 )
shape = SubResource( 11 )

[node name="colisao_esquerda" type="StaticBody2D" parent="colisoes"]
position = Vector2( 9, 64 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="colisoes/colisao_esquerda"]
position = Vector2( 0, 59 )
shape = SubResource( 12 )

[node name="Dash" parent="." instance=ExtResource( 3 )]

[node name="jogador" parent="." instance=ExtResource( 17 )]
position = Vector2( 141, 104 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 256, 151 )
current = true

[node name="mao" type="AnimatedSprite" parent="."]
position = Vector2( 322, 151 )
scale = Vector2( 0.2, 0.2 )
frames = SubResource( 39 )
frame = 6
speed_scale = 2.0
playing = true

[node name="mini_tutorial" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="mini_tutorial"]
margin_right = 517.0
margin_bottom = 309.0
color = Color( 1, 0.996078, 0.815686, 1 )

[node name="instruc1" type="Label" parent="mini_tutorial"]
margin_left = 133.0
margin_top = 68.0
margin_right = 340.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "Esperar uma rodada."

[node name="instruc2" type="Label" parent="mini_tutorial"]
margin_left = 136.0
margin_top = 166.0
margin_right = 485.0
margin_bottom = 187.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 40 )
text = "Ver o padrão de ataques do inimigo."

[node name="carta_esperar" type="Sprite" parent="mini_tutorial"]
position = Vector2( 87, 78 )
scale = Vector2( 2, 2 )
texture = ExtResource( 23 )

[node name="Sprite" type="Sprite" parent="mini_tutorial"]
position = Vector2( 86, 177 )
scale = Vector2( 2, 2 )
texture = ExtResource( 22 )

[node name="ok" type="Button" parent="mini_tutorial"]
margin_left = 248.0
margin_top = 249.0
margin_right = 495.0
margin_bottom = 276.0
custom_colors/font_color = Color( 0.00392157, 0.592157, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 41 )
text = "Clique aqui se entendeu"
flat = true

[connection signal="pressed" from="cartas/carta0" to="cartas" method="_on_carta0_pressed"]
[connection signal="pressed" from="cartas/carta0" to="instrucoes" method="_on_carta0_pressed"]
[connection signal="pressed" from="cartas/carta1" to="cartas" method="_on_carta1_pressed"]
[connection signal="pressed" from="cartas/carta1" to="instrucoes" method="_on_carta1_pressed"]
[connection signal="pressed" from="cartas/carta2" to="cartas" method="_on_carta2_pressed"]
[connection signal="pressed" from="cartas/carta2" to="instrucoes" method="_on_carta2_pressed"]
[connection signal="pressed" from="botoes/botao_pronto" to="." method="_on_botao_pronto_pressed"]
[connection signal="pressed" from="botoes/botao_pronto" to="cartas" method="_on_botao_pronto_pressed"]
[connection signal="pressed" from="botoes/botao_lixeira" to="cartas" method="_on_botao_lixeira_pressed"]
[connection signal="pressed" from="botoes/botao_lixeira" to="instrucoes" method="_on_botao_lixeira_pressed"]
[connection signal="pressed" from="botoes/botao_olho" to="." method="_on_botao_olho_pressed"]
[connection signal="body_entered" from="pisos/piso_centro" to="." method="_on_piso_centro_body_entered"]
[connection signal="body_exited" from="pisos/piso_centro" to="." method="_on_piso_centro_body_exited"]
[connection signal="body_entered" from="pisos/piso_direita" to="." method="_on_piso_direita_body_entered"]
[connection signal="body_exited" from="pisos/piso_direita" to="." method="_on_piso_direita_body_exited"]
[connection signal="pressed" from="mini_tutorial/ok" to="." method="_on_ok_pressed"]
